@@ -25,6 +25,7 @@ Version 2.3.0
    - Bugfix: Infinite loop when specifing a directory as configuration file
    - Feature: Allowing popup getting the keyboard focus without getting it
         automatically when shown (new option "popup/popup_accept_focus")
+   - Feature: More popup options can be configured via the gui
 
 Version 2.2.6
  * Robert Sowada
